--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,8 @@ dependencies:
   bloc: ^8.0.2
   flutter_bloc: ^8.0.1
   sqflite: ^2.0.2
-
+  vibration: ^1.8.0  # Check for the latest version on pub.dev
+  syncfusion_flutter_gauges: ^22.1.39
 dev_dependencies:
   flutter_test:
     sdk: flutter
