--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   sqflite: ^2.0.2
   vibration: ^1.8.0  # Check for the latest version on pub.dev
   syncfusion_flutter_gauges: ^22.1.39
+  flutter_localization: ^0.1.12
+  auto_size_text: ^3.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
