--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   auto_size_text: ^3.0.0
   flutter_screenutil: ^5.9.3
   device_preview:
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
