--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,12 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  flutter_native_splash: ^2.2.18
+flutter_native_splash:
+  color: "#ffffff" # Background color of your splash screen
+  image: assets/image/imageThree.png # Path to your splash screen image
+  android: true # Ensure it's applied to Android
+  ios: true # Ensure it's applied to iOS
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
