--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,9 +43,9 @@ dependencies:
   flutter_localization: ^0.1.12
   auto_size_text: ^3.0.0
   flutter_screenutil: ^5.9.3
-  device_preview:
+  device_preview: ^1.1.0
   shared_preferences: ^2.2.3
-  firebase_core:
+  firebase_core: ^3.2.0
 
 dev_dependencies:
   flutter_test:
